--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,3 +42,16 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
 }
+
+task deleteJar(type: Delete) {
+    delete 'libs/STD_app.jar'
+}
+
+task createJar(type: Copy) {
+    from('build/intermediates/runtime_app_classes_jar/release/')
+    into('libs/')
+    include('classes.jar')
+    rename('classes.jar', 'STD_app.jar')
+}
+
+createJar.dependsOn(deleteJar, build)
